WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108154
IDBFactory::webkitGetDatabaseNames should raise DOMExceptions.
https://bugs.webkit.org/show_bug.cgi?id=108154
Summary
IDBFactory::webkitGetDatabaseNames should raise DOMExceptions.
Mike West
Reported
2013-01-28 23:09:30 PST
In order to properly support blocking third-party IndexedDB usage, ::open, ::getDatabaseNames, and ::deleteDatabase should all throw SECURITY_ERR when used in a blocked third-party context. Currently, ::getDatabaseNames doesn't support exceptions; we should change that.
Attachments
Patch
(4.77 KB, patch)
2013-01-29 00:50 PST
,
Mike West
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike West
Comment 1
2013-01-29 00:50:49 PST
Created
attachment 185190
[details]
Patch
Mike West
Comment 2
2013-01-29 00:52:09 PST
Is this something you'd be comfy reviewing, Jochen? See discussion on
http://wkbug.com/94171
, which is also where tests for this functionality will live. I'll update that patch to rebase on top of this one shortly.
jochen
Comment 3
2013-01-29 02:56:18 PST
Comment on
attachment 185190
[details]
Patch r=me
Mike West
Comment 4
2013-01-29 02:59:42 PST
Comment on
attachment 185190
[details]
Patch cq=me. Thanks. :)
WebKit Review Bot
Comment 5
2013-01-29 03:07:33 PST
Comment on
attachment 185190
[details]
Patch Clearing flags on attachment: 185190 Committed
r141090
: <
http://trac.webkit.org/changeset/141090
>
WebKit Review Bot
Comment 6
2013-01-29 03:07:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug